--- a/scss/__slider.scss
+++ b/scss/__slider.scss
@@ -6,6 +6,7 @@
   .slider {
     width: 75%; /* Full-width */
     height: 20px; /* Specified height */
+    min-width: 75px;
     -webkit-transition: .2s; /* 0.2 seconds transition on hover */
     transition: opacity .2s;
   }
@@ -15,7 +16,7 @@
     writing-mode: bt-lr;
     width: 20px; /* Full-width */
     height: 100%; /* Specified height */
-
+    max-height: 100px;
   }
   
   /* Mouse-over effects */
