adding bee background

--- a/scss/mainStyles.scss
+++ b/scss/mainStyles.scss
@@ -4,6 +4,8 @@ body{
     padding: 0;
     margin: 0;
     background-color: gray;
+    background-image: url("/img/Backgrounds/Bees.4.gif"); 
+
 }
 
 
