--- a/css/mainStyles.css
+++ b/css/mainStyles.css
@@ -3,7 +3,8 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  background-color: gray; }
+  background-color: gray;
+  background-image: url("/img/Backgrounds/Bees.4.gif"); }
 
 .container {
   max-width: 90%;
