--- a/scss/__typography.scss
+++ b/scss/__typography.scss
@@ -2,7 +2,7 @@
 // roboto regular
 .roboto_regular_base{
     font-family: 'Roboto_Regular';
-    color: $pri_dark;
+    color: whitesmoke;
 }
 
 .robo_reg_26{
