--- a/css/mainStyles.css
+++ b/css/mainStyles.css
@@ -8,7 +8,7 @@ body {
   color: whitesmoke; }
 
 .container {
-  max-width: 90%;
+  max-width: 100%;
   padding-top: 2.5%; }
 
 .video_wrapper {
@@ -119,7 +119,7 @@ iframe {
   /* Full-width */
   height: 20px;
   /* Specified height */
-  min-width: 75px;
+  max-width: 100px;
   -webkit-transition: .2s;
   /* 0.2 seconds transition on hover */
   transition: opacity .2s; }
@@ -131,7 +131,7 @@ input.vertical {
   /* Full-width */
   height: 100%;
   /* Specified height */
-  max-height: 100px; }
+  max-height: 75px; }
 
 /* Mouse-over effects */
 .slider:hover {
