--- a/css/mainStyles.css
+++ b/css/mainStyles.css
@@ -129,9 +129,13 @@ input.vertical {
   writing-mode: bt-lr;
   width: 20px;
   /* Full-width */
-  height: 100%;
+  height: 100px;
   /* Specified height */
-  max-height: 75px; }
+  max-height: 75px;
+  color: red;
+  background: red;
+  cursor: pointer;
+  scrollbar-track-color: red; }
 
 /* Mouse-over effects */
 .slider:hover {
